💄 Fixed code block overflow

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -41,3 +41,4 @@ article pre
     padding: 15px 0
     margin: 8px 0
     background: $gray-50
+    overflow-x: scroll
